# bfaas

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  bf.c  bf.h  main.c
bf/: CMakeLists.txt  bf.c  bf.h
bfapp/: CMakeLists.txt  main.c
bflib/: CMakeLists.txt
bfserver/: environment.yaml
bftest/: CMakeLists.txt  main.c
